--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <h1>hello Shahith</h1>
     <h1>hello Shahith</h1>
     <h1>hello Shahith</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quod,
+      accusantium, molestiae rem porro quaerat aliquam, ipsum laborum
+      reprehenderit esse itaque omnis quibusdam quae in fuga quas sapiente magni
+      numquam!
+    </p>
+    <p>Lorem, ipsum dolor.</p>
   </body>
 </html>
